# DIME

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
.github/workflows/: build.yml
Dictionary/: pinyin.txt  wubi86.txt  wubi98.txt
doc/: BinaryDictionaryFormat.md  编译说明.md
installer/: DIME.iss
scripts/: build_debug.bat  build_release.bat  deploy_test.bat  package.bat  wubi_to_ime_dict.py
src/: ActiveLanguageProfileNotifySink.cpp  BaseDictionaryEngine.cpp  BaseDictionaryEngine.h  BaseWindow.cpp  BaseWindow.h  BinaryDictFormat.h  BinaryDictionaryEngine.cpp  BinaryDictionaryEngine.h  ButtonWindow.cpp  ButtonWindow.h  CandidateListUIPresenter.cpp  CandidateListUIPresenter.h  CandidateWindow.cpp  CandidateWindow.h  Compartment.cpp  Compartment.h  Composition.cpp  CompositionProcessorEngine.cpp  CompositionProcessorEngine.h  ConfigDialog.cpp  ConfigDialog.h  ContextMenu.cpp  ContextMenu.h  DIME.cpp  DIME.def  DIME.h  DIME.rc  DIMEBaseStructure.cpp  DIMEBaseStructure.h  DIMEStructureArray.h  DebugLog.cpp  DebugLog.h  Define.h  DictionaryIndex.cpp  DictionaryIndex.h  DictionaryParser.cpp  DictionaryParser.h  DictionarySearch.cpp  DictionarySearch.h  DisplayAttribute.cpp  (+60 more)
